# pibilight

./: .gitignore  CMakeLists.txt  Makefile  README.md  calib_video_data.yml  camera.yml  camera_new.yml  config.yml  pibilight
include/: pibilight.h
scripts/: calibrate.py  create_calibration_video.py  download_apriltags.sh  test_difference_calibration.py
scripts/screen_detector/: filters.py  main.py
src/: pibilight.cpp
src/ext/: loguru.cpp
